Gtk-4.0: Fix extra gap in search bars

--- a/gtk-4.0/widgets/_toolbars.scss
+++ b/gtk-4.0/widgets/_toolbars.scss
@@ -54,8 +54,7 @@ toolbar {
   border-radius: 0  0 5px 5px;
 }
 
-searchbar,
-.location-bar {
+searchbar > revealer > box {
   @extend %toolbar;
 
   @extend %darkbar;
